deploy/pingora_ingress_ctl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingora-ingress-ctl
  namespace: qa
spec:
  selector:
    matchLabels:
      app: pingora-ingress-ctl
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pingora-ingress-ctl
    spec:
      containers:
#        - args:
#            - '-c'
#            - /config/config.yaml
        - command:
            - ./pingora-ingress
          image: wdshihaoren/pingora-ingress:14294998
          imagePullPolicy: Always
          name: container-0
          ports:
            - containerPort: 30003
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
#          volumeMounts:
#            - mountPath: config
#              name: config
#              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: ring-sa
      serviceAccountName: ring-sa
      terminationGracePeriodSeconds: 30
#      volumes:
#        - configMap:
#            defaultMode: 420
#            name: pingora-ingress-ctl-cm
#          name: config
