deploy/pingora-ingress-ctl-src.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingora-ingress-ctl-src
  namespace: qa
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      nodePort: 30003
      port: 30003
      protocol: TCP
      targetPort: 30003
  selector:
    app: pingora-ingress-ctl
  sessionAffinity: None
  type: NodePort
